The menu window showing the deep space image should no longer stretch the image

--- a/stylesheets/menu.css
+++ b/stylesheets/menu.css
@@ -139,7 +139,7 @@
 
 .screen__image-deepspace {
   height: 100%;
-  width: 100%;
+  width: auto;
 }
 
 .screen__image-admiral {
